--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix"
   },
@@ -17,6 +17,7 @@
     "eslint-plugin-prettier": "3.2.0",
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^3.10.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
