--- a/tsconfig.json
+++ b/tsconfig.json
@@ -54,6 +54,9 @@
       ],
       "@shared/*": [
         "src/shared/*"
+      ],
+      "@entities/*": [
+        "src/modules/products/typeorm/entities/*"
       ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
