--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,6 +57,9 @@
       ],
       "@entities/*": [
         "src/modules/products/typeorm/entities/*"
+      ],
+      "@repositories/*": [
+        "src/modules/products/typeorm/repositories/*"
       ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
