refactor: ProductServices path map added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,6 +60,9 @@
       ],
       "@repositories/*": [
         "src/modules/products/typeorm/repositories/*"
+      ],
+      "@ProductServices/*": [
+        "src/modules/products/services/*"
       ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
