refactor: path map to ProductsController created

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,8 +61,12 @@
       "@repositories/*": [
         "src/modules/products/typeorm/repositories/*"
       ],
-      "@ProductServices/*": [
+      "@ProductsServices/*": [
         "src/modules/products/services/*"
+      ]
+      ,
+      "@ProductsController": [
+        "src/modules/products/controller/ProductsController.ts"
       ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
