--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/joi": "^17.2.3",
     "celebrate": "^15.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
