--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,7 +69,10 @@
       ],
       "@ProductsRoutes": [
         "src/modules/products/routes/products.routes.ts"
-      ]
+      ],
+      "@UsersEntities": [
+        "src/modules/users/typeorm/entities/User.ts"
+      ],
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                             /* List of folders to include type definitions from. */
