--- a/tsconfig.json
+++ b/tsconfig.json
@@ -73,6 +73,9 @@
       "@UsersEntities": [
         "src/modules/users/typeorm/entities/User.ts"
       ],
+      "@UsersRepositories": [
+        "src/modules/users/typeorm/repositories/UsersRepository.ts"
+      ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                             /* List of folders to include type definitions from. */
