--- a/tsconfig.json
+++ b/tsconfig.json
@@ -75,7 +75,10 @@
       ],
       "@UsersRepositories": [
         "src/modules/users/typeorm/repositories/UsersRepository.ts"
-      ]
+      ],
+      "@UsersController": [
+        "src/modules/users/controller/UsersController.ts"
+      ],
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                             /* List of folders to include type definitions from. */
