refactor: path map UsersServices created

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -79,6 +79,9 @@
       "@UsersController": [
         "src/modules/users/controller/UsersController.ts"
       ],
+      "@UsersServices/*": [
+        "src/modules/users/services/*"
+      ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                             /* List of folders to include type definitions from. */
