--- a/tsconfig.json
+++ b/tsconfig.json
@@ -81,6 +81,9 @@
       ],
       "@UsersServices/*": [
         "src/modules/users/services/*"
+      ],
+      "@UsersRoutes": [
+        "src/modules/users/routes/users.routes.ts"
       ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
