--- a/tsconfig.json
+++ b/tsconfig.json
@@ -84,6 +84,9 @@
       ],
       "@UsersRoutes": [
         "src/modules/users/routes/users.routes.ts"
+      ],
+      "@SessionsController": [
+        "src/modules/users/controller/SessionsController.ts"
       ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
