path map to SessionsRoutes added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -87,6 +87,9 @@
       ],
       "@SessionsController": [
         "src/modules/users/controller/SessionsController.ts"
+      ],
+      "@SessionsRoutes": [
+        "src/modules/users/routes/sessions.routes.ts"
       ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
