refactor: path map to middlewares created

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,6 +55,9 @@
       "@shared/*": [
         "src/shared/*"
       ],
+      "@middlewares/*": [
+        "src/shared/http/middlewares/*"
+      ],
       "@ProductsEntities": [
         "src/modules/products/typeorm/entities/Product.ts"
       ],
