--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,6 +58,9 @@
       "@middlewares/*": [
         "src/shared/http/middlewares/*"
       ],
+      "@MainRoutes": [
+        "src/shared/http/routes/index.ts"
+      ],
       "@ProductsEntities": [
         "src/modules/products/typeorm/entities/Product.ts"
       ],
