refactor: path name UsersEntities structure changed to get all files in the folder and setted all imports affected

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -76,8 +76,8 @@
       "@ProductsRoutes": [
         "src/modules/products/routes/products.routes.ts"
       ],
-      "@UsersEntities": [
-        "src/modules/users/typeorm/entities/User.ts"
+      "@UsersEntities/*": [
+        "src/modules/users/typeorm/entities/*"
       ],
       "@UsersRepositories": [
         "src/modules/users/typeorm/repositories/UsersRepository.ts"
