--- a/tsconfig.json
+++ b/tsconfig.json
@@ -79,8 +79,8 @@
       "@UsersEntities/*": [
         "src/modules/users/typeorm/entities/*"
       ],
-      "@UsersRepositories": [
-        "src/modules/users/typeorm/repositories/UsersRepository.ts"
+      "@UsersRepositories/*": [
+        "src/modules/users/typeorm/repositories/*"
       ],
       "@UsersController": [
         "src/modules/users/controller/UsersController.ts"
