refactor: path name ProductsRoutes structure changed to get access all files inside its folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -73,8 +73,8 @@
       "@ProductsControllers/*": [
         "src/modules/products/controllers/*"
       ],
-      "@ProductsRoutes": [
-        "src/modules/products/routes/products.routes.ts"
+      "@ProductsRoutes/*": [
+        "src/modules/products/routes/*"
       ],
       "@UsersEntities/*": [
         "src/modules/users/typeorm/entities/*"
