--- a/tsconfig.json
+++ b/tsconfig.json
@@ -91,8 +91,8 @@
       "@UsersServices/*": [
         "src/modules/users/services/*"
       ],
-      "@UsersRoutes": [
-        "src/modules/users/routes/users.routes.ts"
+      "@UsersRoutes/*": [
+        "src/modules/users/routes/*"
       ],
       "@SessionsController": [
         "src/modules/users/controllers/SessionsController.ts"
