--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,6 +99,12 @@
       ],
       "@SessionsRoutes": [
         "src/modules/users/routes/sessions.routes.ts"
+      ],
+      "@CustomersEntities/*": [
+        "src/modules/customers/typeorm/entities/*"
+      ],
+      "@CustomersRepositories/*": [
+        "src/modules/customers/typeorm/repositories/*"
       ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
