--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,6 +105,12 @@
       ],
       "@CustomersRepositories/*": [
         "src/modules/customers/typeorm/repositories/*"
+      ],
+      "@CustomersServices/*": [
+        "src/modules/customers/services/*"
+      ],
+      "@CustomersControllers/*": [
+        "src/modules/customers/controllers/*"
       ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
