typeorm-pagination dependency added

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemailer": "^6.6.3",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.35"
+    "typeorm": "^0.2.35",
+    "typeorm-pagination": "^2.0.3"
   }
 }
