--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.26.7",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^14.14.32",
     "@types/nodemailer": "^6.4.4",
+    "@types/redis": "^2.8.31",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
@@ -36,10 +38,12 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
+    "ioredis": "^4.27.7",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
     "pg": "^8.7.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.35",
     "typeorm-pagination": "^2.0.3"
