--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,11 @@ APP_DB_PASSWORD =
 REDIS_HOST =
 REDIS_PORT =
 REDIS_PASSWORD =
+
+# ethereal or ses
+MAIL_DRIVER =
+
+# AWS Credentials
+AWS_REGION =
+AWS_ACCESS_KEY_ID =
+AWS_SECRET_ACCESS_KEY =
