--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.977.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.0",
     "cors": "^2.8.5",
