--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.35",
-    "typeorm-pagination": "^2.0.3"
+    "typeorm-pagination": "^2.0.3",
+    "winston": "^3.3.3"
   }
 }
