--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.26.7",
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^14.14.32",
     "@types/nodemailer": "^6.4.4",
@@ -41,6 +42,7 @@
     "handlebars": "^4.7.7",
     "ioredis": "^4.27.8",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
     "pg": "^8.7.1",
