--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,20 @@ REDIS_HOST =
 REDIS_PORT =
 REDIS_PASSWORD =
 
+# local-disk or s3
+STORAGE_DRIVER =
+
+# AWS S3 Settings
+AWS_S3_BUCKET =
+AWS_S3_REGION =
+AWS_S3_ACCESS_KEY_ID =
+AWS_S3_SECRET_ACCESS_KEY =
+
 # ethereal or ses
 MAIL_DRIVER =
 
-# AWS Credentials
-AWS_REGION =
-AWS_ACCESS_KEY_ID =
-AWS_SECRET_ACCESS_KEY =
+# AWS SES Settings
+AWS_SES_API_VERSION =
+AWS_SES_REGION =
+AWS_SES_ACCESS_KEY_ID =
+AWS_SES_SECRET_ACCESS_KEY =
