.env.example file structure updated

--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,15 @@ REDIS_PASSWORD =
 # local-disk or s3
 STORAGE_DRIVER =
 
+# File extensions allowed to be uploaded
+UPLOAD_ALLOWED_FILE_TYPES = ["image/jpeg", "image/png", "image/gif"]
+
+# Maximum allowed upload file size in MB
+UPLOAD_FILE_MAX_SIZE = 2
+
 # AWS S3 Settings
+AWS_S3_REGION = us-east-1
 AWS_S3_BUCKET =
-AWS_S3_REGION =
 AWS_S3_ACCESS_KEY_ID =
 AWS_S3_SECRET_ACCESS_KEY =
 
@@ -27,7 +33,7 @@ AWS_S3_SECRET_ACCESS_KEY =
 MAIL_DRIVER =
 
 # AWS SES Settings
-AWS_SES_API_VERSION =
-AWS_SES_REGION =
+AWS_SES_REGION = us-east-1
+AWS_SES_API_VERSION = 2010-12-01
 AWS_SES_ACCESS_KEY_ID =
 AWS_SES_SECRET_ACCESS_KEY =
