--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     // "composite": true,                           /* Enable project compilation */
     // "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
     // "removeComments": true,                      /* Do not emit comments to output. */
-    // "noEmit": true,                              /* Do not emit outputs. */
+    "noEmit": false,                              /* Do not emit outputs. */
     // "importHelpers": true,                       /* Import emit helpers from 'tslib'. */
     // "downlevelIteration": true,                  /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
     // "isolatedModules": true,                     /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
@@ -60,7 +60,7 @@
         "src/shared/http/middlewares/*"
       ],
       "@MainRoutes": [
-        "src/shared/http/routes/index.ts"
+        "src/shared/http/routes/index"
       ],
       /* Products path maps */
       "@ProductsEntities/*": [
