--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.26.7",
+    "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.7",
@@ -36,6 +37,7 @@
     "eslint": "^7.21.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.2.0",
+    "jest": "^27.1.0",
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.10.1",
