tests path map created on tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
+      "@tests/*": [
+        "src/__tests__/*"
+      ],
       "@config/*": [
         "src/config/*"
       ],
