--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint-fix": "eslint . --ext .ts --fix",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "build": "babel src --extensions \".js,.ts\" --out-dir build --copy-files",
-    "test": "jest"
+    "test": "jest --silent=false"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
