.env.example updated

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ REDIS_PORT =
 REDIS_PASSWORD =
 
 # local-disk or s3
-STORAGE_DRIVER =
+STORAGE_DRIVER = local-disk
 
 # File extensions allowed to be uploaded
 UPLOAD_ALLOWED_FILE_TYPES = ["image/jpeg", "image/png", "image/gif"]
@@ -30,7 +30,7 @@ AWS_S3_ACCESS_KEY_ID =
 AWS_S3_SECRET_ACCESS_KEY =
 
 # ethereal or ses
-MAIL_DRIVER =
+MAIL_DRIVER = ethereal
 
 # AWS SES Settings
 AWS_SES_REGION = us-east-1
