--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^14.14.32",
     "@types/nodemailer": "^6.4.4",
     "@types/redis": "^2.8.31",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -40,6 +41,7 @@
     "eslint-plugin-prettier": "3.2.0",
     "jest": "^27.1.0",
     "prettier": "^2.2.1",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.10.1",
@@ -52,6 +54,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
