--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,24 @@ version: "3"
 services:
   app:
     build: .
-    entrypoint: .docker/entrypoint.sh
+    entrypoint: ["sh", ".docker/entrypoint.sh"]
     container_name: apivendas-app
     ports:
       - "3000:3000"
     volumes:
       - .:/home/node/app
     depends_on:
-      - db
+      - database
       - redis
 
-  db:
+  database:
     build: .docker/postgres
-    container_name: apivendas-db
+    container_name: apivendas-database
     restart: always
     tty: true
     ports:
       - "5432:5432"
     volumes:
-      - apivendas-postgresql-volume:/var/lib/postgresql:Z
       - .docker/dbdata:/var/lib/postgresql/postgresql:Z
     environment:
       - POSTGRES_PASSWORD=docker
@@ -43,8 +42,4 @@ services:
     ports:
       - "8000:80"
     depends_on:
-      - db
-
-volumes:
-  apivendas-postgresql-volume:
-    external: true
+      - database
