--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "build": "babel src --extensions \".js,.ts\" --out-dir build --copy-files",
+    "build": "babel src --extensions \".js,.ts\" --out-dir build",
     "test": "jest --silent=false"
   },
   "devDependencies": {
